Fixed ui break in people to connect

--- a/src/pages/Connect People/connect.css
+++ b/src/pages/Connect People/connect.css
@@ -30,9 +30,9 @@
   .people-list {
     display: flex;
     align-items: center;
-    justify-content: center;
     overflow-x: scroll;
-  }
+    width: 100vw;
+}
   .heading-ctp {
     text-align: center;
   }
